--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>
-  {{title}}
-</h1>
+<div>
+  <app-header></app-header>
+</div>
+<div>
+  <app-content></app-content>
+</div>
+<div>
+  <app-footer></app-footer>
+</div>
