--- a/src/app/pages/footer/footer.component.html
+++ b/src/app/pages/footer/footer.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-header navbar-footercls">
-            <a class="navbar-brand navbar-footercls">2017 © Walking Tree Pvt Ltd</a>
+            <a class="navbar-brand navbar-footercls">{{'2017 © Walking Tree Pvt Ltd' | translate}}</a>
         </div>
     </div>
 </nav>
