--- a/src/app/pages/header/header.component.css
+++ b/src/app/pages/header/header.component.css
@@ -4,8 +4,13 @@
 .header-title{
     margin-left: 12% !important;
 }
-
+.header-lable{
+    margin-left: 33% !important;
+}
 .logo-imgcls{
     width: 25%;
     margin-top: 2%
+}
+.header-selector{
+    margin: 1%;
 }
